[package]
name = "rustamethyst"
version = "0.5.0"
description = "amethyst"
license = "CC0-1.0"
authors = ["Awpteamoose <cargo@awpteamoose.my.to>", "Walter Pearce <jaynus@gmail.com>"]
repository = "https://github.com/jaynus/amethyst-imgui"
readme = "README.md"
edition = "2018"

[dependencies.amethyst]
version = "0.14"
features = ["vulkan"]

[dependencies]

#[[example]]
#name = "demo_window"
#path = "examples/demo_window.rs"